# tt

./: .gitignore  LICENSE  README.md  stack.yaml
hw1/: hw1.cabal
hw1/src/: HeadReductor.hs  Main.hs  Parser.hs  Reductor.hs  Simplifier.hs
hw2/: hw2.cabal
hw2/src/: Lib.hs  Main.hs  Resolver.hs  Simplifier.hs  Struct.hs  Typer.hs
hw3/: hw3.cabal
hw3/src/: Main.hs  Parser.hs  Resolver.hs  Simplifier.hs  Struct.hs  W.hs
hw6/: NatExtension.idr  Rational.idr  RationalSetoid.idr  SignedInt.idr  SignedSetoid.idr
