name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for TT ITMO course

homepage:            https://github.com//tt-homework/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Artem Pavlenko
maintainer:          lytr777@mail.ru
copyright:           2017 Artem Pavlenko

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Main
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                       , megaparsec
                       , containers
                       , mtl
  default-language:    Haskell2010
